--- a/css/styles.css
+++ b/css/styles.css
@@ -591,10 +591,71 @@ img {
 
 .a-soc-footer:hover {
   background-color: #31d0aa;
-
 }
 
 .a-soc-footer:focus {
   background-color: #31d0aa;
+}
 
+
+
+
+.footer-forms {
+  margin-left: 80px;
+}
+
+.footer-forms-p {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+}
+
+.footer-forms-form {
+  display: flex;
+  gap: 24px;
+  flex-direction: row;
+}
+
+.footer-forms-input {
+  width: 264px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: #ffffff;
+}
+
+.footer-forms-input::placeholder {
+  color: #ffffff;
+}
+
+.footer-forms-button {
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4D5AE5;
+  border: none;
+  border-radius: 4px;
+}
+
+.icon-svg-forms {
+  fill: #fff;
+  margin-left: 16px
 }
