--- a/css/styles.css
+++ b/css/styles.css
@@ -703,24 +703,22 @@ img {
 }
 
 .modal-window-button:hover {
-  fill: #ffffff
+  fill: #ffffff;
+  background-color: #404bbf;
+  border: none;
 }
 
 .modal-window-button:focus {
-  fill: #ffffff
+  fill: #ffffff;
+  background-color: #404bbf;
+  border: none;
 }
 
 .icons-windows {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icons-windows:hover {
-  fill: #ffffff;
-}
 
-.icons-windows:focus {
-  fill: #ffffff;
-}
 
 .modal-p {
   font-weight: 500;
@@ -732,6 +730,9 @@ img {
   margin-bottom: 16px;
 }
 
+.form-container {
+  margin-bottom: 8px;
+}
 
 .windows-label {
   font-weight: 400;
