--- a/css/styles.css
+++ b/css/styles.css
@@ -771,7 +771,7 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icons-input:focus {
+.input:focus+.icons-input {
   fill: #4D5AE5;
 }
 
